--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="circle"></div>
             </div>
         </section>
-        <div id="output"><br></div>
+        <center>
+            <div id="output"><br></div>
+        </center>
         <div class="events">
             <button onclick="oddOrEven()">Check</button>
             <button onclick="window.location.reload()">Reset</button>
